# TreeOfLife

./: LICENSE  README.md  environment.yml  pyproject.toml
code/: hdp_extraction_SBS52.R  hdp_extraction_SBS96.R  hdp_noprior_SBS52.R  hdp_noprior_SBS96.R
docs/: abouheifs_cmean.md  burden.md  install.md  mutational_signature_extraction.md  sbs52.md  sbs96.md  sbs96_to_sbs52.md  trinucleotide.md
scripts/: EF8_EF9.R  get_abouheif_C_mean.py  get_bq_cumulative_proportion.py  get_categorical_colours.py  get_circular_consensus_sequencing_error_rate.py  get_domain_tree.py  get_ggtree_species_tree.py  get_mutation_burden_per_cell.py  get_newick_tree.py  get_order_tree.py  get_q93_genomic_distribution.py  get_reference_tricounts.py  get_sample_newick_tree.py  get_sample_taxonomic_tree.py  get_sample_tree.py  get_sbs52_barplot.py  get_sbs52_counts.py  get_sbs96_barplot.py  get_sbs96_counts.py  get_sbs96_mapped_to_sbs52.py  get_sbs96_to_sbs52_lookup_table.py  get_species_tree.py  get_taxa_newick_tree.py  get_taxonomic_classification.py  get_taxonomic_classification_statistics.py  get_taxonomic_tree.py  get_tri_equal_weight_sbs52_counts.py  get_tri_equal_weight_sbs96_counts.py  plot_cosine_similarity_between_cosmic_and_stol.py  plot_cosine_similarity_between_gtol_and_stol.py  plot_cosine_similarity_between_stol_and_stol.py  plot_extended_data_figure_3.R  plot_germline_sbs52_and_somatic_sbs52_sbs96_mutational_spectrum_barplot.R  plot_gtol_signature_and_top_signature_attribution_barplot.R  plot_normalised_and_unnormalised_sbs52_mutational_spectrum_barplot.R  (+24 more)
(+39 files in other folders)
